# cpp_data_visualizer

./: .editorconfig  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/data/: CMakeLists.txt  DataStructure.h  DataStructureHolder.cpp  DataStructureHolder.h  Vector2DDataStructureBase.cpp
src/data/include/: IStdOuputWriter.h  Vector2DDataStrcuture.hpp  Vector2DDataStructureBase.h
test/: CMakeLists.txt  test2dvectors.cpp
